removed the vw from the width of the header to prevent width overflow

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,7 @@
 header {
   background: #ffffff;
   max-height: 25vh;
-  width: 100vw;
+  width: 100%;
   padding-bottom: 1.5%;
   display: flex;
   justify-content: space-between;
